--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://flanthedev.github.io/portfolio/",
+  "homepage": "https://flan.website",
   "dependencies": {
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
